
public class AnimationName
{

    public readonly string Idle0 = "Idle0";
    public readonly string Idle2 = "Idle2";
    public readonly string Idle1 = "Idle1";

    public readonly string Run0 = "Run0";
    public readonly string Run1 = "Run1";

    public readonly string StandPushHold = "StandPushHold";

    public readonly string StandPushIdle0 = "StandPushIdle0";
    public readonly string StandPushIdle1 = "StandPushIdle1";

    public readonly string StandPushWalk = "StandPushWalk";

    public readonly string StandPushDeniedBlock = "StandPushDeniedBlock";
    public readonly string StandPushDeniedUp = "StandPushDeniedUp";

}
